in the indentation space of a line.
+Fix Close All option in tab context menu not working on GTK.
+Fix Codebrowser not refreshing when files are opened from the file dialog
on Linux.
+Fix error that could occur while trying to save filehistory on exit.
+Fix toolbar not resizing properly when changing icon size on osx.
+Fix error in highlighing of DTD.

#-----------------------------------------------------------------------------#

VERSION 0.4.65
DATE 02/20/2009
23rd Alpha Release

NEWS:
This release contains a large number of bug fixes and improvements. Most notably
there has been a fair amount of work done on the autocompletions support. All
file types now have support for some basic word completion help. HTML and XML
now have support for smart input assistance and completion tips.

NEW: [features/improvments]
+Add autocompletion support for HTML/XML documents.
+Instantly start searching for selected text (Win/Lin Ctrl+F3, OSX Cmd+3)
+Launch adds support for OCaml (patch from quode),
 Batch scripts (patch from GaÎl), and LaTex.
+Shortcut for maximizing/minimizing the editor pane (patch from Rudi Pettazzi)
+Add menu entry for Fold All action (patch from Giuseppe "Cowo" Corbelli)
+Codebrowser adds support for XML/HTML (patch from Rudi Pettazzi)
+Codebrowser adds support for Vala, VBScript
+Some minor changes to the default hightlighting style. The old default is now
called Cream.
+Add simple generic autocompleter that provides completions based off of words
in the current buffer (Ctrl+Space). (patch from Giuseppe "Cowo" Corbelli)
+Add Move Tab to New Window option on tab context menu.
+Keyword helper functionality moved into the simple completer.

BUG FIXES:
+Update window being shown at same time as splash window causing lockups.
+Fix trim trailing whitespace from getting the wrong text position when certain
unicode characters are present.
+Add some missing JavaScript keywords (patch from Rudi Pettazzi)
+Fix groups not being expanded on a regex replace action.