@@ -42,6 +42,7 @@ on Linux.
 +Fix error that could occur while trying to save filehistory on exit.
 +Fix toolbar not resizing properly when changing icon size on osx.
 +Fix error in highlighing of DTD.
++Fix titlebar showing incorrect text for untitled files.
 
 #-----------------------------------------------------------------------------#
 
